# drf-standardized-errors

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  README.md  pyproject.toml  tox.ini
.github/workflows/: coverage.yml  github_release.yml  tests.yml
docs/: Makefile  changelog.md  conf.py  contibuting.md  customization.md  error_response.md  faq.md  gotchas.md  index.md  make.bat  openapi.md  openapi_sample_description.md  quickstart.md  release.md  settings.md
drf_standardized_errors/: __init__.py  formatter.py  handler.py  openapi.py  openapi_hooks.py  openapi_serializers.py  openapi_utils.py  openapi_validation_errors.py  settings.py  types.py
release/: update_changelog.py
tests/: conftest.py  fuzzing_urls.py  models.py  settings.py  test_api_fuzzing.py  test_exception_handler.py  test_flatten_errors.py  test_openapi.py  test_openapi_utils.py  test_openapi_validation_errors.py  test_settings.py  urls.py  utils.py  views.py
