[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "drf-standardized-errors"
keywords = [
    "standardized errors",
    "errors formatter",
    "django rest framework",
    "exception handler",
]
authors = [{ name = "Ghazi Abbassi" }]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dynamic = ["version", "description"]
requires-python = ">=3.8"
dependencies = [
    "django >=3.2",
    "djangorestframework >=3.12",
]

[project.urls]
Homepage = "https://github.com/ghazi-git/drf-standardized-errors"
Documentation = "https://drf-standardized-errors.readthedocs.io/en/latest/"
Code = "https://github.com/ghazi-git/drf-standardized-errors"
Issues = "https://github.com/ghazi-git/drf-standardized-errors/issues"
Changelog = "https://github.com/ghazi-git/drf-standardized-errors/releases"

[tool.flit.module]
name = "drf_standardized_errors"

[project.optional-dependencies]
dev = ["pre-commit"]
doc = [
    "sphinx!=5.2.0.post0",
    "sphinx-autobuild",
    "sphinx-rtd-theme>=1.1.0",
    "myst-parser",
]
test = [
    "tox",
    "tox-gh-actions",
]
release = [
    "flit",
    "keyring",
    "tbump",
]
openapi = [
    "drf-spectacular>=0.27.0",
    "inflection",
]

[tool.tbump]

[tool.tbump.version]
current = "0.14.1"
regex = '''
  (?P<major>\d+)
  \.
  (?P<minor>\d+)
  \.
  (?P<patch>\d+)
  '''

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"

[[tool.tbump.file]]
src = "drf_standardized_errors/__init__.py"
search = '__version__ = "{current_version}"'

[[tool.tbump.before_commit]]
name = "Update the changelog"
cmd = "python release/update_changelog.py --new-version {new_version}"

[[tool.tbump.after_push]]
name = "Publish to PyPI"
cmd = "flit publish"
